new features. Refresh button. Styling. Copy feature. ECt

--- a/index.html
+++ b/index.html
@@ -8,12 +8,50 @@
   <title>Nickname generator</title>
 </head>
 <body>
-<h1 class="title">
-  Nickname Generator
-</h1>
-<hr class="main-divider">
-<h3 id="name">
+<div class="main-wrapper">
+  <h1 class="title">
+    Nickname Generator
+  </h1>
+  <div class="flex-horizontal-wrapper">
 
-</h3>
+    <select id="country-select" title="Country">
+      <option value="Albania">Albania</option>
+      <option value="Armenia">Armenia</option>
+      <option value="Bangladesh">Bangladesh</option>
+      <option value="Belgium">Belgium</option>
+      <option value="Bosnia and Herzegovina">Bosnia and Herzegovina</option>
+      <option value="Bulgaria">Bulgaria</option>
+      <option value="China">China</option>
+      <option value="Estonia">Estonia</option>
+      <option value="Finland">Finland</option>
+      <option value="France">France</option>
+      <option value="Greece">Greece</option>
+      <option value="Italy">Italy</option>
+      <option value="Netherlands">Netherlands</option>
+      <option value="Norway">Norway</option>
+      <option value="Poland">Poland</option>
+      <option value="Portugal">Portugal</option>
+      <option value="Poland">Poland</option>
+      <option value="India">India</option>
+    </select>
+
+    <select name="gender" id="gender-select">
+      <option value="both">Both</option>
+      <option value="male">Male</option>
+      <option value="female">Female</option>
+    </select>
+  </div>
+
+  <hr class="main-divider">
+  <h3 class="generated-name" id="name">
+  </h3>
+  <button id="btn-copy" class="button">Copy</button>
+
+  <button id="btn-generate" class="button">Generate new name</button>
+  <footer class="footer">
+    <p>Created by Andriy Gaidar</p>
+    <a href="#">Contact me</a>
+  </footer>
+</div>
 </body>
 </html>
