--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Nickname generator</title>
-</head>
+<link href="styles.css" rel="stylesheet"></head>
 <body>
 <div class="main-wrapper">
   <h1 class="title">
@@ -53,5 +53,5 @@
     <a href="#">Contact me</a>
   </footer>
 </div>
-</body>
+<script type="text/javascript" src="bundle.js"></script></body>
 </html>
